--- a/turbo.json
+++ b/turbo.json
@@ -6,6 +6,10 @@
       "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**"]
     },
+    "start": {
+      "dependsOn": ["^build"],
+      "persistent": true
+    },
     "lint": {
       "dependsOn": ["^lint"]
     },
