--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -9,6 +9,13 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.15.8",
+    "@mui/material": "^5.15.7",
+    "@mui/material-nextjs": "^5.15.7",
     "@repo/ui": "workspace:*",
     "next": "^14.0.4",
     "react": "^18.2.0",
