--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3000",
+    "dev": "next dev --port 4000",
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --max-warnings 0"
@@ -13,13 +13,17 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@mui/base": "5.0.0-beta.35",
     "@mui/icons-material": "^5.15.8",
+    "@mui/joy": "5.0.0-beta.26",
     "@mui/material": "^5.15.7",
     "@mui/material-nextjs": "^5.15.7",
     "@repo/ui": "workspace:*",
     "next": "^14.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styles": "link:@mui/joy/styles",
+    "v14-styles": "link:@mui/material-nextjs/v14-styles"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.4",
