--- a/apps/playground/tsconfig.json
+++ b/apps/playground/tsconfig.json
@@ -14,8 +14,8 @@
   "include": [
     "next-env.d.ts",
     "next.config.js",
-    "**/*.ts",
-    "**/*.tsx",
+    "./**/*.ts",
+    "./**/*.tsx",
     ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
