--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -18,12 +18,22 @@
     "@mui/joy": "5.0.0-beta.26",
     "@mui/material": "^5.15.7",
     "@mui/material-nextjs": "^5.15.7",
+    "@mui/system": "^5.15.9",
     "@repo/ui": "workspace:*",
+    "clsx": "^2.1.0",
     "next": "^14.0.4",
+    "postcss": "^8.4.35",
+    "ra-data-fakerest": "^4.16.9",
+    "ra-input-rich-text": "^4.16.9",
     "react": "^18.2.0",
+    "react-admin": "^4.16.9",
     "react-dom": "^18.2.0",
     "styles": "link:@mui/joy/styles",
-    "v14-styles": "link:@mui/material-nextjs/v14-styles"
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
+    "tsup": "^8.0.1",
+    "v14-styles": "link:@mui/material-nextjs/v14-styles",
+    "vite": "^5.1.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.4",
