--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -17,9 +17,10 @@
     "@mui/icons-material": "^5.15.8",
     "@mui/joy": "5.0.0-beta.26",
     "@mui/material": "^5.15.7",
-    "@mui/material-nextjs": "^5.15.7",
+    "@mui/material-nextjs": "^5.15.9",
     "@mui/system": "^5.15.9",
     "@repo/ui": "workspace:*",
+    "autoprefixer": "^10.4.17",
     "clsx": "^2.1.0",
     "next": "^14.0.4",
     "postcss": "^8.4.35",
