--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.0",
     "next": "^14.0.4",
     "postcss": "^8.4.35",
+    "postcss-nesting": "^12.0.2",
     "ra-data-fakerest": "^4.16.9",
     "ra-input-rich-text": "^4.16.9",
     "react": "^18.2.0",
