--- a/apps/material-ui-react-admin/package.json
+++ b/apps/material-ui-react-admin/package.json
@@ -10,6 +10,9 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@mui/material": "^5.15.9",
+    "Book": "link:@mui/icons-material/Book",
+    "ChatBubble": "link:@mui/icons-material/ChatBubble",
     "ra-data-fakerest": "^4.14.0",
     "ra-input-rich-text": "^4.14.0",
     "react": "^18.2.0",
