attached notes from https://codelabs.developers.google.com/visualize-dynamic-color#2

--- a/apps/bundle/tsconfig.json
+++ b/apps/bundle/tsconfig.json
@@ -13,7 +13,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": "./",
+    "paths": {
+      "@color/*": ["./src/colors/*.json"],
+      "@shell/*": ["apps/shell/src/*"],
+      "@visual-bundle/*": ["apps/visual-bundle/src/*"],
+      "@visual-webpack/*": ["apps/visual-webpack/src/*"]
+    }
   },
-  "include": ["../visual-webpack/src"]
+  "include": ["../**/*.tsx?rc"],
+  "exclude": ["node_modules"]
 }
