--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -20,8 +20,11 @@
     "@mui/material-nextjs": "^5.15.9",
     "@mui/system": "^5.15.9",
     "@repo/ui": "workspace:*",
+    "AppBar": "link:@mui/material/AppBar",
+    "Header": "link:@mui/material/Header",
     "autoprefixer": "^10.4.17",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.3",
     "next": "^14.0.4",
     "postcss": "^8.4.35",
     "postcss-nesting": "^12.0.2",
@@ -31,6 +34,7 @@
     "react-admin": "^4.16.9",
     "react-dom": "^18.2.0",
     "styles": "link:@mui/joy/styles",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "tsup": "^8.0.1",
