--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -17,7 +17,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-scripts": "latest",
-    "typescript": "latest"
+    "typescript": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
