--- a/apps/bundle/package.json
+++ b/apps/bundle/package.json
@@ -8,6 +8,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-scripts": "latest",
+    "reactflow": "^11.10.4",
     "typescript": "latest"
   },
   "scripts": {
