--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -1,40 +1,35 @@
 {
-  "name": "shell",
-  "version": "0.0.0",
+  "name": "shell2",
+  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@emotion/react": "latest",
-    "@emotion/styled": "latest",
-    "@material/material-color-utilities": "^0.2.7",
-    "@material/web": "^1.2.0",
-    "@mui/icons-material": "^5.15.8",
-    "@mui/lab": "5.0.0-alpha.165",
-    "@mui/material": "^5.15.9",
-    "@mui/material-next": "6.0.0-alpha.122",
-    "@mui/utils": "^5.15.9",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-scripts": "latest",
-    "typescript": "^5.3.3"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "classnames": "^2.5.1",
+    "clsx": "^2.1.0",
+    "material-symbols": "^0.15.0",
+    "next": "14.1.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "reactflow": "^11.10.4",
+    "tailwind-merge": "^2.2.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
