--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
