--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-tabs": "^1.0.4",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
     "material-symbols": "^0.15.0",
